QuickLogic: add CODEOWNERS entry
Signed-off-by: Karol Gugala <kgugala@antmicro.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -29,6 +29,7 @@ frontends/verilog/             @zachjs
 frontends/ast/                 @zachjs
 
 techlibs/intel_alm/            @ZirconiumX
+techlibs/quicklogic/           @kgugala
 
 # pyosys
 misc/*.py                      @btut
