--- a/techlibs/quicklogic/Makefile.inc
+++ b/techlibs/quicklogic/Makefile.inc
@@ -5,6 +5,7 @@ OBJS += techlibs/quicklogic/pp3_braminit.o
 
 $(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/cells_map.v))
 $(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/ap3_cells_map.v))
+$(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/ap3_arith_map.v))
 $(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/pp3_cells_map.v))
 $(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/cells_sim.v))
 $(eval $(call add_share_file,share/quicklogic,techlibs/quicklogic/pp3_cells_sim.v))
